--- a/settings.yml
+++ b/settings.yml
@@ -3,3 +3,4 @@ ADD_TIMESTAMP_TO_PROCESSED_FILES: True
 DATA_FOLDER: "data"
 LOOKUP_FOLDER: "lookup"
 OUTPUT_FOLDER: "output"
+FORCE_UPC_EXCEL_STRING: True # If True, UPCs and Stock Codes will be suffixed with a single quote to force Excel to treat them as text
